# cadius

./: .gitignore  CMakeLists.txt  Cadius  README.md
.github/workflows/: release.yml
Src/: CMakeLists.txt  Dc_Memory.c  Dc_OS.c  Dc_Shared.c  Main.c  Makefile  Prodos_Add.c  Prodos_Check.c  Prodos_Create.c  Prodos_Delete.c  Prodos_Dump.c  Prodos_Extract.c  Prodos_Move.c  Prodos_Rename.c  Prodos_Source.c
test/: test_cadius.sh
test/testfiles/: test.s.src
